# pequieater

./: .gitignore  README.md  db.sqlite3  pyproject.toml
backend/: settings.py  urls.py
core/: urls.py  views.py
core/templates/: base.html  login.html  post_list.html  register.html  user_detail.html
core/templates/partials/: _follow_button.html  _post.html  _post_form.html  _user_update_form.html
post/: forms.py  models.py  serializers.py  urls.py  views.py
post/migrations/: 0001_initial.py  0002_post_image_url_post_likes_comment.py
staticfiles/css/: styles.css
user/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_customuser_following.py  0003_customuser_avatar_url.py
