[project]
name = "backend"
version = "0.1.0"
description = "Pequieater is a Twitter Clone but with extra flavour!"
authors = [
    {name = "Tomás Fava",email = "favasistemas@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12 <4.0"
dependencies = [
    "django (>=5.2.2,<6.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "drf-yasg (>=1.21.10,<2.0.0)",
    "htmx (>=0.0.0,<0.0.1)",
    "django-cors-headers (>=4.7.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
